[gd_scene load_steps=5 format=3 uid="uid://b8ye3k8bv6pwt"]

[ext_resource type="Script" path="res://examples/demo.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://chl10qtjlwqg4" path="res://test.png" id="2_2nptx"]
[ext_resource type="Script" path="res://examples/tab_container.gd" id="3_xiqfx"]
[ext_resource type="PackedScene" uid="uid://f8mefisxwryb" path="res://label_notif.tscn" id="4_s1v22"]

[node name="Demo" type="CanvasLayer"]
script = ExtResource("1")

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("2_2nptx")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.378873, 0.574352, 0.799851, 1)

[node name="HTTPRequest" type="HTTPRequest" parent="."]
unique_name_in_owner = true

[node name="TabContainer" type="TabContainer" parent="." node_paths=PackedStringArray("OBS")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
current_tab = 0
script = ExtResource("3_xiqfx")
OBS = NodePath("..")

[node name="Home" type="TabBar" parent="TabContainer"]
unique_name_in_owner = true
layout_mode = 2
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Home"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 14.0
offset_top = 17.0
offset_right = -14.0
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 2

[node name="SPACE" type="Control" parent="TabContainer/Home/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="TabContainer/Home/VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_vertical = 3

[node name="btn_video" type="Button" parent="TabContainer/Home/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Video"

[node name="btn_photo" type="Button" parent="TabContainer/Home/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Photo"

[node name="SPACE2" type="Control" parent="TabContainer/Home/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="TabContainer/Home/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="btn_upload_last" type="Button" parent="TabContainer/Home/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
text = "Upload Last Pic"

[node name="btn_upload_manual" type="Button" parent="TabContainer/Home/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
text = "Upload Manual"

[node name="FileDialog_manual_upload" type="FileDialog" parent="TabContainer/Home/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
size = Vector2i(303, 300)
access = 2
filters = PackedStringArray("*.png, *.jpg, *.mkv, *.mp4")
use_native_dialog = true

[node name="Settings" type="TabBar" parent="TabContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Settings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="TabContainer/Settings/VBoxContainer"]
layout_mode = 2
text = "Name of Scene in OBS:"

[node name="tx_namescene" type="LineEdit" parent="TabContainer/Settings/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
text = "Scene"

[node name="lb_namescene" type="Label" parent="TabContainer/Settings/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Where to save Picture:"

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Settings/VBoxContainer"]
layout_mode = 2

[node name="btn_pic_path" type="Button" parent="TabContainer/Settings/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Select Path"

[node name="lb_pic_path" type="Label" parent="TabContainer/Settings/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "_"

[node name="FileDialog_pic_path" type="FileDialog" parent="TabContainer/Settings/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
title = "Open a Directory"
size = Vector2i(352, 180)
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2
use_native_dialog = true

[node name="SPACE3" type="Control" parent="TabContainer/Settings/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="TabContainer/Settings/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Settings/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Video Timer:"

[node name="tx_video_timer" type="SpinBox" parent="TabContainer/Settings/VBoxContainer/HBoxContainer2"]
layout_mode = 2
min_value = 1.0
max_value = 10.0
value = 5.0

[node name="SPACE" type="Control" parent="TabContainer/Settings/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="SPACE2" type="Control" parent="TabContainer/Settings/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="Label2" type="Label" parent="TabContainer/Settings/VBoxContainer"]
layout_mode = 2
text = "QR Error Correction:"

[node name="error_correction_level" type="OptionButton" parent="TabContainer/Settings/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label3" type="Label" parent="TabContainer/Settings/VBoxContainer"]
layout_mode = 2
text = "Link:"

[node name="tx_linkwebsite" type="LineEdit" parent="TabContainer/Settings/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
text = "https://avolutioninc.net/fotoar/"

[node name="btn_load_default" type="Button" parent="TabContainer/Settings"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -62.0
offset_top = -50.0
offset_right = 62.0
offset_bottom = -19.0
grow_horizontal = 2
grow_vertical = 0
text = "Load Default Settings"

[node name="Center" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="label_notif" parent="." instance=ExtResource("4_s1v22")]
visible = false

[connection signal="pressed" from="TabContainer/Home/VBoxContainer/HBoxContainer2/btn_video" to="TabContainer" method="_on_btn_video_pressed"]
[connection signal="pressed" from="TabContainer/Home/VBoxContainer/HBoxContainer2/btn_photo" to="TabContainer" method="_on_btn_photo_pressed"]
[connection signal="pressed" from="TabContainer/Home/VBoxContainer/HBoxContainer3/btn_upload_last" to="TabContainer" method="_on_btn_upload_last_pressed"]
[connection signal="pressed" from="TabContainer/Home/VBoxContainer/HBoxContainer3/btn_upload_manual" to="TabContainer" method="_on_btn_upload_manual_pressed"]
[connection signal="file_selected" from="TabContainer/Home/VBoxContainer/HBoxContainer3/FileDialog_manual_upload" to="TabContainer" method="_on_file_dialog_manual_upload_file_selected"]
[connection signal="pressed" from="TabContainer/Settings/VBoxContainer/HBoxContainer/btn_pic_path" to="TabContainer" method="_on_btn_pic_path_pressed"]
[connection signal="dir_selected" from="TabContainer/Settings/VBoxContainer/HBoxContainer/FileDialog_pic_path" to="TabContainer" method="_on_file_dialog_pic_path_dir_selected"]
[connection signal="pressed" from="TabContainer/Settings/btn_load_default" to="TabContainer" method="_on_btn_load_default_pressed"]
